# Holon

./: .gitignore  README.md  index.html  script.js  style.css
.github/workflows/: build.yml
js/: gui.js  main.js  types.js  wasm-loader.js
js/pkg/: ajisai_core.d.ts  ajisai_core.js  ajisai_core_bg.wasm  ajisai_core_bg.wasm.d.ts  package.json
rust/: Cargo.toml  lib.rs
rust/src/: builtins.rs  interpreter.rs  lib.rs  tokenizer.rs  types.rs
